platter-compiler-sveltejs/static/python/tests/syntax_programs/invalid_tests/test_script_60.platter
start(){
    serve x + 1: 2;
}